# alexandria

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.node-agent  LICENSE  README.MD  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  prometheus.yml  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/api/: .env.example  jest.config.js  jest.config.ts  package.json  tsconfig.json
apps/web/: .env.local  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
crates/core-sdk/: Cargo.toml
crates/core-sdk/src/: lib.rs
crates/core-sdk/src/chunking/: mod.rs
crates/core-sdk/src/consistent_hashing/: mod.rs
crates/core-sdk/src/crypto/: envelope.rs  mod.rs
crates/core-sdk/src/domain/: alert.rs  chunk.rs  cluster.rs  file.rs  manifest.rs  member.rs  mod.rs  node.rs  replica.rs  vault.rs
crates/core-sdk/src/hashing/: mod.rs
crates/core-sdk/src/preview/: mod.rs
crates/core-sdk/src/storage/: local.rs  mod.rs  s3.rs
crates/node-agent/: Cargo.toml
crates/node-agent/src/: api.rs  config.rs  heartbeat.rs  main.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: main.rs
crates/orchestrator/src/api/: alerts.rs  auth.rs  clusters.rs  files.rs  health.rs  metrics.rs  mod.rs  nodes.rs  recovery.rs
crates/orchestrator/src/auth/: claims.rs  jwt.rs  middleware.rs  mod.rs  password.rs  refresh.rs
crates/orchestrator/src/db/: alerts.rs  chunk_replicas.rs  chunks.rs  clusters.rs  files.rs  manifests.rs  members.rs  mod.rs  nodes.rs  vaults.rs
crates/orchestrator/src/scheduler/: auto_healing.rs  auto_healing_test.rs  garbage_collection.rs  heartbeat.rs  heartbeat_test.rs  media_processing.rs  mod.rs  rebalancing.rs  scrubbing.rs  scrubbing_test.rs  tiering.rs
crates/orchestrator/src/services/: auth_service.rs  cluster_service.rs  dedup_service.rs  file_service.rs  file_service_test.rs  invite_service.rs  media_pipeline.rs  mod.rs  node_service.rs  node_service_test.rs  quota_service.rs  recovery_service.rs  tiering_service.rs
docs/: PRD.MD  backend-answers.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  adr-template.md
docs/backend/: 00-backend-vision.md  01-architecture.md  02-project-structure.md  03-domain.md  04-data-layer.md  05-api-contracts.md  06-services.md  07-controllers.md  08-middlewares.md  09-errors.md  10-validation.md  11-permissions.md  12-events.md  13-integrations.md  14-tests.md
docs/blueprint/: 00-context.md  01-vision.md  02-architecture_principles.md  03-requirements.md  04-domain-model.md  04-domain_model.md  05-data-model.md  05-data_model.md  06-system-architecture.md  06-system_architecture.md  07-critical_flows.md  08-use_cases.md  09-state-models.md  09-state_models.md  10-architecture_decisions.md  11-build_plan.md  12-testing_strategy.md  13-security.md  14-scalability.md  15-observability.md  16-evolution.md  17-communication.md  README.MD
docs/business/: 00-contexto-negocio.md  01-proposta-valor.md  02-segmentos-personas.md  03-canais-distribuicao.md  04-relacionamento.md  05-modelo-receita.md  06-estrutura-custos.md  07-metricas-kpis.md  08-estrategia-marketing.md  09-plano-operacional.md
docs/diagrams/: README.md
docs/frontend/: 00-visao-frontend.md  01-architecture.md  01-arquitetura.md  02-estrutura-projeto.md  02-project-structure.md  03-design-system.md  04-componentes.md  04-components.md  05-estado.md  05-state.md  06-data-layer.md  07-rotas.md  07-routes.md  08-flows.md  08-fluxos.md  09-testes.md  09-tests.md  10-performance.md  11-security.md  11-seguranca.md  12-observabilidade.md  14-copies.md  (+3 more)
frontend/: 08-fluxos.md
infra/: promtail-config.yaml
migrations/: 001_create_clusters.up.sql  002_create_members.up.sql  003_create_nodes.up.sql  004_create_files.up.sql  005_create_manifests.up.sql  006_create_chunks.up.sql  007_create_chunk_replicas.down.sql  007_create_chunk_replicas.up.sql  008_create_vaults.up.sql  009_create_alerts.up.sql  010_add_files_search.down.sql  010_add_files_search.up.sql  011_add_file_versions.down.sql  011_add_file_versions.up.sql  012_add_member_quotas.down.sql  012_add_member_quotas.up.sql  013_add_storage_tiers.down.sql  013_add_storage_tiers.up.sql  014_add_auth.down.sql  014_add_auth.up.sql  015_add_temp_path.down.sql  015_add_temp_path.up.sql
(+554 files in other folders)
