[package]
name = "alexandria-node-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node Agent: armazenamento local de chunks, heartbeat, scrubbing"

[[bin]]
name = "node-agent"
path = "src/main.rs"

[dependencies]
alexandria-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
