[package]
name = "alexandria-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Orchestrator: API REST (Axum), scheduler, media workers, vault management"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
alexandria-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
