[package]
name = "alexandria-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Orchestrator: API REST (Axum), scheduler, media workers, vault management"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
alexandria-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true }
